--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
         Homework #5
         <a href="homework5image.html">Image 1</a>
        </div>
+
+       <div class="homework-item">
+        Homework #6
+        <a href="homework6image.html">Image 1</a>
+       </div>
     
       <div class="homework-item">Homework #5</div>
       <div class="homework-item">Homework #6</div>
