--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
        <div class="homework-item">
         Homework #7
-        <a href="homework7imagel.html">Image 1 (Original(</a>
+        <a href="homework7imagel.html">Image 1</a>
         <a href="homework7image2.html">Image 2</a>
       </div>
     
